--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -36,4 +36,11 @@ open.exchange.rates:
   symbols: EUR,BGN
   enabled: false
 
+mail:
+  mobilele: "mobilele@example.com"
+  host: localhost
+  port: 1025
+  username: ${MAIL_USER:softuni}
+  password: ${MAIL_PASSWORD:softuni}
+
 
