--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -43,4 +43,13 @@ mail:
   username: ${MAIL_USER:softuni}
   password: ${MAIL_PASSWORD:softuni}
 
+management:
+  server:
+    port: 8081
+  endpoints:
+    web:
+      base-path: /actuator
+      exposure:
+        include: "*"
+
 
